refactor: migrate to Media3

--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -9,7 +9,7 @@
     android:keepScreenOn="true"
     tools:context=".ui.player.PlayerFragment">
 
-    <com.google.android.exoplayer2.ui.StyledPlayerView
+    <androidx.media3.ui.PlayerView
         android:id="@+id/styled_player"
         android:layout_width="match_parent"
         android:layout_height="0dp"
